--- a/README
+++ b/README
@@ -8,10 +8,26 @@ How to Run:
 ~~~~~~~~~~~~~~~~~~~~~~~~~
 Difficulties:
  - time
+ - researching
+ - incomplete previous projects
+ - learning message queues/ how to use them to enforce critical section
  - 
 ~~~~~~~~~~~~~~~~~~~~~~~~~
 Notes:
 Log file for version control is in gitlog.txt
 Log file for processes is in log.txt
 
+!! -- INCOMPLETE -- !!
+The program will run but not to specifications.
 
+I did not have enough time to complete this project. I will continue to work on it 
+because I can see that the projects in the future will build off of it so I will need
+it to be complete anyway. Because I hadn't finished the previous projects completely,
+I had to do a lot more research and programming than I should have and it ended up
+taking me a lot of time to figure out things I should have done already. I did discover
+a good way to structure these projects that makes them easier to handle so I'm hopeful
+this will result in a smoother experience for me from now on.
+
+I will resubmit once I am happy with the project. It might take a couple more days but I
+do have an hour long break this Thursday and Friday where I should be able to get something
+done. 
