what did i do holy moly

--- a/README
+++ b/README
@@ -20,7 +20,9 @@ Log file for processes is in log.txt
 !! -- INCOMPLETE -- !!
 The program will run but not to specifications.
 
-I did not have enough time to complete this project. I will continue to work on it 
+I did not have enough time to complete this project. I had to plan activities for my
+preschool room for much longer than I thought I would have to because one of my coworkers
+decided to take the week off. I've been very busy. I will continue to work on it 
 because I can see that the projects in the future will build off of it so I will need
 it to be complete anyway. Because I hadn't finished the previous projects completely,
 I had to do a lot more research and programming than I should have and it ended up
