--- a/README
+++ b/README
@@ -19,6 +19,10 @@ Log file for processes is in log.txt
 
 !! -- INCOMPLETE -- !!
 The program will run but not to specifications.
+UPDATE: STUCK IN LOOP
+
+I wrote as many lines as I could with the extra two days that you gave us and I hadn't
+been testing it for a while and now the program gets stuck in a loop... 
 
 I did not have enough time to complete this project. I had to plan activities for my
 preschool room for much longer than I thought I would have to because one of my coworkers
@@ -31,5 +35,5 @@ a good way to structure these projects that makes them easier to handle so I'm h
 this will result in a smoother experience for me from now on.
 
 I will resubmit once I am happy with the project. It might take a couple more days but I
-do have an hour long break this Thursday and Friday where I should be able to get something
-done. 
+do have an hour long break this Thursday and Friday where I should be able to get
+something done. 
